<resources>
    <string name="app_name">Tamizh Pallikoodam</string>
    <string name="title_activity_home">Main Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tamizh Pallikoodam Inc.</string>
    <string name="nav_header_subtitle">www.tamizhpallikoodam.org.au/</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_phrases">Phrases</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_colors">Colors</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_numbers">Numbers</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_family">Family Members</string>

    <!-- Category name for the vocabulary words [CHAR LIMIT=20] -->
    <string name="category_vocabulary">Vocabulary</string>

    <!-- Category name for the about [CHAR LIMIT=20] -->
    <string name="category_about">About</string>

    <!-- Category name for the website [CHAR LIMIT=20] -->
    <string name="category_website">Website</string>

    <!-- Category name for the game [CHAR LIMIT=20] -->
    <string name="category_game">Game</string>

    <!-- details for the game [CHAR LIMIT=20] -->
    <string name="details_game">Word matching game</string>

    <!-- details for the about [CHAR LIMIT=20] -->
    <string name="details_about">About this app</string>

    <!-- details for the website [CHAR LIMIT=20] -->
    <string name="details_website">Visit school website</string>

    <!-- details for the vocabs [CHAR LIMIT=20] -->
    <string name="details_vocabualry">Learn some Tamizh words</string>

    <!-- details for the numbers [CHAR LIMIT=20] -->
    <string name="details_numbers">Learn Tamizh numbers</string>

    <!-- details for the colors [CHAR LIMIT=20] -->
    <string name="details_colors">Colors in Tamizh language</string>

    <!-- details for the family members [CHAR LIMIT=20] -->
    <string name="details_family">Family members in Tamizh</string>

    <!-- details for the family phrases [CHAR LIMIT=20] -->
    <string name="details_phrases">Basic Tamizh phrases</string>

    <!-- http://www.tamizhpallikoodam.org.au/ -->
    <string name="tamizhpallikoodam_website">http://www.tamizhpallikoodam.org.au/</string>

    <!-- Slogan for main menu-->
    <string name="title_gui_menu">Let\'s Learn Tamizh!</string>

    <!-- Slogan for main menu-->
    <string name="title_activity_question">Question</string>

    <!-- about app title-->
    <string name="title_about_app">About Tamizh Pallikoodam App</string>

    <!-- about app text-->
    <string name="text_about_app">Tamizh Pallikoodam (TPK) is a not for profit school run solely to provide Australians an opportunity to explore and experience the rich Tamil traditions, language, arts and culture. Our Tamil school is a great supporter of the Australian government’s multicultural agenda.

The school has a unique leadership group drawn out of senior teachers in public and private schools around Melbourne, Victoria, who have designed a highly contextual curriculum that makes learning Tamil a fun activity.

The curriculum sits fairly within the Victorian Essential Learning Standards (VELS) paradigm and hence the children are taught Tamil in the same way they are taught other subjects in their day schools. Children learn the language as well as the history and culture of Tamil by learning storytelling, drama and skit. Learning multiple languages has evidence base for enhancing the cognitive and intellectual capacity of the learner and it is hoped that the Pallikoodam will contribute to the enrichment of Australia’s future generations, intellectually, philosophically and emotionally leading to a well-rounded, compassionate, all-encompassing world citizen.

Tamizh Pallikoodam is a not for profit school.</string>

    <!-- about app text-->
    <string name="text_about_app_2">The general idea is to have a mobile application as a tool to aid in the learning process for the students.

Make learning the language interesting and fun. The use of specific applications like this could help the school as an organisation that embraces technology in teaching and learning, in turn getting a good will within the community.
    </string>

    <!-- about app text-->
    <string name="text_about_app_3">This app has been developed by Digital Bliss team as part of their final assignment for COSC7362 Develop advanced mobile multi-touch applications course of study, RMIT university, 2018</string>

    <!-- game submit button-->
    <string name="button_submit">SUBMIT</string>

</resources>
